# mercury-language

./: CMakeLists.txt  LICENSE  clang_tidy_review.yaml  grammar.txt  main.cpp  parser.cpp  parser.hpp
.github/workflows/: clang-tidy-review.yml  clang-tidy.yml
test/: parser.cpp
